--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,8 +2,8 @@
   "store.home": { 
     "blocks": [
       "rich-text",
-      "info-card",
-      "info-card"
+      "info-card#button-right",
+      "info-card#button-left"
     ]
   },
   "rich-text":{
