--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,12 +2,14 @@
   
   "store.home": { 
     "blocks":[
-      "rich-text",
+       "rich-text",
        "info-card#button-right",
        "info-card#button-left",
        "flex-layout.row",
        "shelf",
-       "slider-layout#home"
+       "slider-layout#home",
+       "responsive-layout.desktop#desktop",
+       "responsive-layout.mobile#mobile"
     ]
   },
 
@@ -86,7 +88,59 @@
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
       "maxWidth": "100%"
     }
+  },
+
+  // De aici incepe partea de responsive.
+  "responsive-layout.desktop#desktop": {
+    "children": ["rich-text#desktop",
+                 "image#desktop"]
+   },
+   "responsive-layout.mobile#mobile": {
+    "children": ["rich-text#mobile",
+                 "image#mobile"]
+   },
+  //primul element
+   "rich-text#desktop": {
+    "props": {
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
+  },
+  
+  "rich-text#mobile": {
+    "props": {
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
+  },
+
+  //al doilea element din lista de responsive
+  "image#desktop": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      } ,
+      "alt": "Coffee Makers Collection",
+      "maxWidth": "100%"
+    }
+  },
+  
+  "image#mobile": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      } ,
+      "alt": "Coffee Makers Collection",
+      "maxWidth": "100%"
+    }
   }
+
+
+
 
 
 }
