--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -32,7 +32,7 @@
       "callToActionMode": "button",
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
-      "textAlignment": "center",
+      "textAlignment": "CENTER",
       "blockClass": "vintage"
     }
   },
@@ -99,45 +99,45 @@
     "children": ["rich-text#mobile",
                  "image#mobile"]
    },
-  //primul element
-   "rich-text#desktop": {
-    "props": {
-      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER"
-    }
-  },
-  
-  "rich-text#mobile": {
-    "props": {
-      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER"
-    }
-  },
+  //primul element din lista de children
+    "rich-text#desktop": {
+      "props": {
+        "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
+        "textPosition": "CENTER",
+        "textAlignment": "CENTER"
+      }
+    },
+    
+    "rich-text#mobile": {
+      "props": {
+        "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
+        "textPosition": "CENTER",
+        "textAlignment": "CENTER"
+      }
+    },
 
-  //al doilea element din lista de responsive
-  "image#desktop": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
-      "link": {
-        "url": "/small-appliances/coffee-makers"
-      } ,
-      "alt": "Coffee Makers Collection",
-      "maxWidth": "100%"
+  //al doilea element din lista de children
+    "image#desktop": {
+      "props": {
+        "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
+        "link": {
+          "url": "/small-appliances/coffee-makers"
+        } ,
+        "alt": "Coffee Makers Collection",
+        "maxWidth": "100%"
+      }
+    },
+    
+    "image#mobile": {
+      "props": {
+        "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
+        "link": {
+          "url": "/small-appliances/coffee-makers"
+        } ,
+        "alt": "Coffee Makers Collection",
+        "maxWidth": "100%"
+      }
     }
-  },
-  
-  "image#mobile": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
-      "link": {
-        "url": "/small-appliances/coffee-makers"
-      } ,
-      "alt": "Coffee Makers Collection",
-      "maxWidth": "100%"
-    }
-  }
 
 
 
