--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,53 @@
 {
   "store.product": {
     "children": [
+      "flex-layout.row#main"
+
     ]
+  },
+
+//Primul rand - ramane doar asa.
+  "flex-layout.row#main": { 
+    "props": { 
+      "marginTop": 6
+    },
+    "children": [
+      "flex-layout.col#left",
+      "flex-layout.col#right"
+    ]
+  },
+//coloana stanga
+  "flex-layout.col#left": {
+    "children": [
+      "product-images"
+    ]
+  },
+//coloana dreapta  
+  "flex-layout.col#right": {
+    "props": { 
+      "verticalAligh": "CENTER",
+      "preventVerticalStretch": true
+    },
+    "children": [
+      "product-name",
+      "product-price",
+      "buy-button"
+    ]
+  },
+  
+  "product-price":{
+    "props":{
+      "showSavings": true,
+      "showListPrice": true
+    }
+
   }
+
+
+
+
+
+
+
+
 }
