--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,8 +1,8 @@
 {
   "store.product": {
     "children": [
+      "breadcrumb",
       "flex-layout.row#main"
-
     ]
   },
 
@@ -30,8 +30,18 @@
     },
     "children": [
       "product-name",
+      "product-identifier.product",
       "product-price",
+      "flex-layout.row#qty-sku",
+      "shipping-simulator",
       "buy-button"
+    ]
+  },
+
+  "flex-layout.row#qty-sku": {
+    "children": [
+      "sku-selector",
+      "product-quantity"
     ]
   },
   
@@ -40,6 +50,8 @@
       "showSavings": true,
       "showListPrice": true
     }
+
+    
 
   }
 
