--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -65,7 +65,8 @@
           "props":{
             "initialSelection":"empty",
             "ShowValueForVariation":"all",
-            "showVariationsErrorMessage":"true"
+            "showVariationsErrorMessage":"true",
+            "showVariationsLabels": "true"
           }
         },
 
