--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -64,7 +64,8 @@
         "sku-selector":{
           "props":{
               "initialSelection":"empty",
-              "ShowValueForVariation":"all",
+              //"ShowValueForVariation":"all",
+              "showValueNameForImageVariation": true,
               "showVariationsErrorMessage":true
           }
         },
